--- a/Util/index.html
+++ b/Util/index.html
@@ -1,1 +1,149 @@
-ChinaSS/Util
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>公共组件样例</title>
+    <link rel="stylesheet" href="lib/modules/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/docs.min.css" />
+</head>
+<body>
+    <header class="navbar navbar-static-top bs-docs-nav" id="top" role="banner">
+        <div class="container">
+            <div class="navbar-header">
+                <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href="../" class="navbar-brand">中软UI组件库</a>
+            </div>
+            <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="../getting-started/"></a>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="http://expo.bootcss.com"></a></li>
+                    <li><a href="http://blog.getbootstrap.com"></a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <div class="bs-docs-header" id="content">
+        <div class="container">
+            <h1>公共组件</h1>
+        </div>
+    </div>
+    <div class="container bs-docs-container">
+        <div class="row">
+            <div class="col-md-9" role="main">
+                
+                <div class="bs-docs-section">
+                    <h1 id="tabDemo" class="page-header">tab页签</h1>
+                    <p>tab页签样例</p>
+                    <div class="bs-example">
+
+                    </div>
+                </div>
+
+                <div class="bs-docs-section">
+                    <h1 id="tableDemo" class="page-header">table</h1>
+                    <p>table样例</p>
+                    <div class="bs-example">
+                        <div id="DemoGirdDivId"></div>
+                    </div>
+                </div>
+                <div class="bs-docs-section">
+                    <h1 id="treeDemo" class="page-header">tree</h1>
+                    <p>树，参考zTree的<a href="http://www.ztree.me/v3/demo.php#_101" target="_bank">demo</a>
+                        以及<a href="http://www.ztree.me/v3/api.php" target="_blank">API</a>
+                    </p>
+                    <div class="bs-example">
+                        <div id="TreeId" class="ztree"></div>
+                    </div>
+                </div>
+                <div class="bs-docs-section">
+                    <h1 id="alertDemo" class="page-header">alert</h1>
+                    <p>alert弹出框</p>
+                    <div class="bs-example">
+                        <button type="button" class="btn btn-primary" onclick="require(['Util'],function(u){u.alert('alert弹出框！')})">alert</button>
+                    </div>
+                </div>
+                <div class="bs-docs-section">
+                    <h1 id="confirmDemo" class="page-header">comfirm</h1>
+                    <p>confirm弹出框</p>
+                    <div class="bs-example">
+                        <button type="button" class="btn btn-primary" onclick="require(['Util'],function(u){u.confirm('confirm弹出框！')})">confirm</button>
+                    </div>
+                </div>
+                <div class="bs-docs-section">
+                    <h1 id="TreeDialogDemo" class="page-header">TreeDialog</h1>
+                    <p>TreeDialog样例</p>
+                    <div class="bs-example">
+                        <button type="button" class="btn btn-primary" id="treeDialogId">treeDialog</button>
+                    </div>
+                </div>
+                <div class="bs-docs-section">
+                    <h1 id="GridDialogDemo" class="page-header">GridDialog</h1>
+                    <p>GridDialog样例</p>
+                    <div class="bs-example">
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="bs-docs-sidebar hidden-print hidden-xs hidden-sm affix-top" role="complementary" id="affix">
+                    <ul class="nav bs-docs-sidenav">
+                        <li class="active">
+                            <a href="#tabDemo">tab页签</a>
+                        </li>
+                        <li class="">
+                            <a href="#tableDemo">table</a>
+                        </li>
+                        <li class="">
+                            <a href="#treeDemo">tree</a>
+                        </li>
+                        <li class="">
+                            <a href="#alertDemo">alert弹出框</a>
+                        </li>
+                        <li class="">
+                            <a href="#confirmDemo">confirm弹出框</a>
+                        </li>
+                        <li class="">
+                            <a href="#TreeDialogDemo">TreeDialog</a>
+                        </li>
+                        <li class="">
+                            <a href="#GridDialogDemo">GridDialog</a>
+                        </li>
+                    </ul>
+                    <a class="back-to-top" href="#top">
+                        返回顶部
+                    </a>
+
+                    <a href="#" class="bs-docs-theme-toggle">
+                        主题预览
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="lib/modules/requirejs/require.js" type="text/javascript"></script>
+    <!--[if !IE]> -->
+    <script type="text/javascript">
+        require.config({paths:{"jquery":"modules/jquery/jquery.min"}});
+    </script>
+    <!-- <![endif]-->
+    <!--[if IE]>
+    <script type="text/javascript">
+        require.config({paths:{"jquery":"modules/jquery/jquery1x.min"}});
+    </script>
+    <![endif]-->
+
+    <!-- 页面加载总入口 -->
+    <script src="lib/main.js"></script>
+</body>
+</html>
